manifests/fortio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-mesh-benchmark
---
# Fortio Server (Echo Target)
apiVersion: v1
kind: Service
metadata:
  name: fortio-server
  namespace: service-mesh-benchmark
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 8079
      targetPort: 8079
      protocol: TCP
      name: grpc
  selector:
    app: fortio-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-server
  namespace: service-mesh-benchmark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-server
  template:
    metadata:
      labels:
        app: fortio-server
    spec:
      nodeSelector:
        dedicated: fortio
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "fortio"
          effect: "NoSchedule"
      containers:
      - name: fortio
        image: fortio/fortio
        ports:
          - name: echo
            containerPort: 8078
            protocol: TCP
          - name: grpc
            containerPort: 8079
            protocol: TCP
          - name: http
            containerPort: 8080
            protocol: TCP
          - name: redirect
            containerPort: 8081
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        # resources:
        #   requests:
        #     cpu: "100m"
        #     memory: "128Mi"
        #   limits:
        #     cpu: "250m"
        #     memory: "256Mi"
---
# Fortio Client (to run tests manually)
apiVersion: v1
kind: Service
metadata:
  name: fortio-client
  namespace: service-mesh-benchmark
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: fortio-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-client
  namespace: service-mesh-benchmark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-client
  template:
    metadata:
      name: fortio-client
      namespace: service-mesh-benchmark
      labels:
        app: fortio-client
    spec:
      nodeSelector:
        dedicated: fortio
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "fortio"
          effect: "NoSchedule"
      containers:
        - name: fortio
          image: fortio/fortio
          ports:
            - name: echo
              containerPort: 8078
              protocol: TCP
            - name: grpc
              containerPort: 8079
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: redirect
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          # resources:
          #   requests:
          #     cpu: "250m"
          #     memory: "256Mi"
          #   limits:
          #     cpu: "500m"
          #     memory: "512Mi"
